# aenex-discord

./: .env.example  Cargo.toml  README.md
migrations/: 001_initial.down.sql  001_initial.up.sql
src/: commands.rs  main.rs
src/commands/: profile.rs  start.rs
