[package]
name = "aenex-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
poise = "0.6.1"
serde = "1.0.216"
serde_json = "1.0.134"
serenity = "0.12.4"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "json",
    "migrate",
    "postgres",
    "runtime-tokio",
    "rust_decimal",
    "tls-rustls-ring",
] }
tokio = { version = "1.42.0", features = ["full"] }
